Day1 수업 내용 입니다.

--- a/1.Movielens 데이터셋.ipynb
+++ b/1.Movielens 데이터셋.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python 3.12.11 (main, Dec  8 2025, 16:18:07) [GCC 13.3.0]\n",
+      "Python 3.12.11 (main, Dec 12 2025, 14:54:08) [GCC 13.3.0]\n",
       "Dataset path ../dataset\n",
       "pandas 2.3.3\n",
       "numpy 2.3.5\n"
@@ -705,6 +705,33 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "3032f681-ea97-452c-bcc9-49ba763ee616",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user id,item id,rating,timestamp\n",
+      "196,242,3,881250949\n",
+      "186,302,3,891717742\n",
+      "22,377,1,878887116\n",
+      "244,51,2,880606923\n",
+      "166,346,1,886397596\n",
+      "298,474,4,884182806\n",
+      "115,265,2,881171488\n",
+      "253,465,5,891628467\n",
+      "305,451,3,886324817\n"
+     ]
+    }
+   ],
+   "source": [
+    "!head ../dataset/ratings_100k.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "13e78a0d-d32a-46be-a0b0-ca75fe3d82ef",
    "metadata": {},
    "outputs": [
@@ -835,7 +862,7 @@
        "[100000 rows x 4 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,18 +915,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "8d257e0d-e6de-49a6-8b7d-af645544dd72",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.12/site-packages/pandas/io/formats/format.py:1458: RuntimeWarning: overflow encountered in cast\n",
-      "  has_large_values = (abs_vals > 1e6).any()\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -932,35 +951,35 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>17</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>1999-12-03 19:24:37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>25</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1999-12-03 19:43:48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
        "      <td>29</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>2</td>\n",
        "      <td>1999-11-22 00:36:16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
        "      <td>30</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>5</td>\n",
        "      <td>1999-12-03 19:24:37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
        "      <td>32</td>\n",
-       "      <td>5.0</td>\n",
+       "      <td>5</td>\n",
        "      <td>1999-11-22 00:00:58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -981,7 +1000,7 @@
        "      <th>32000200</th>\n",
        "      <td>200948</td>\n",
        "      <td>79796</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>2010-10-16 08:04:52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1012,14 +1031,14 @@
       ],
       "text/plain": [
        "          userId  movieId  rating                date\n",
-       "0              1       17     4.0 1999-12-03 19:24:37\n",
-       "1              1       25     1.0 1999-12-03 19:43:48\n",
-       "2              1       29     2.0 1999-11-22 00:36:16\n",
-       "3              1       30     5.0 1999-12-03 19:24:37\n",
-       "4              1       32     5.0 1999-11-22 00:00:58\n",
+       "0              1       17       4 1999-12-03 19:24:37\n",
+       "1              1       25       1 1999-12-03 19:43:48\n",
+       "2              1       29       2 1999-11-22 00:36:16\n",
+       "3              1       30       5 1999-12-03 19:24:37\n",
+       "4              1       32       5 1999-11-22 00:00:58\n",
        "...          ...      ...     ...                 ...\n",
        "32000199  200948    79702     4.5 2011-01-07 15:03:09\n",
-       "32000200  200948    79796     1.0 2010-10-16 08:04:52\n",
+       "32000200  200948    79796       1 2010-10-16 08:04:52\n",
        "32000201  200948    80350     0.5 2011-01-07 15:04:31\n",
        "32000202  200948    80463     3.5 2012-10-16 21:43:20\n",
        "32000203  200948    87304     4.5 2012-10-16 21:38:43\n",
@@ -1027,7 +1046,7 @@
        "[32000204 rows x 4 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "9c5e6a57-36c0-41cb-8b21-fbc7b795f52e",
    "metadata": {},
    "outputs": [
@@ -1080,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "5007e037-457c-4017-b099-395c87456325",
    "metadata": {},
    "outputs": [
@@ -1207,7 +1226,7 @@
        "[87585 rows x 2 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1241,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "8a546579-2251-4f07-babc-7c2ab3f3f430",
    "metadata": {},
    "outputs": [
@@ -1287,7 +1306,7 @@
        " 'vote_count': 16869}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1301,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "4c6ce47a-acd2-40bc-b143-5544139eeead",
    "metadata": {},
    "outputs": [
@@ -1347,7 +1366,7 @@
        " 'vote_count': 16869}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1361,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "683a6da2-62ad-4d5d-9137-47fed8cd736b",
    "metadata": {},
    "outputs": [
@@ -1371,7 +1390,7 @@
        "(86576, 86577)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1411,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "118b153a-2f95-4002-8ffc-c7333af613e9",
    "metadata": {},
    "outputs": [
@@ -1422,7 +1441,7 @@
        "       -0.00891308, -0.01079059], shape=(1536,))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1436,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "aff12605-4f57-4d16-82d5-7f30a3d4c2ba",
    "metadata": {},
    "outputs": [
@@ -1448,7 +1467,7 @@
        " (1536,))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1459,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "d0df78a0-712e-489e-aad7-8ba4c810e751",
    "metadata": {},
    "outputs": [
@@ -1469,7 +1488,7 @@
        "86576"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1492,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "8bb766f1-665d-447d-8816-2362b12140d3",
    "metadata": {},
    "outputs": [
@@ -1503,7 +1522,7 @@
        "       -0.0124166 , -0.02548294], shape=(1536,))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1517,7 +1536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "00c84b21-f7da-4289-8073-6c97cb653c57",
    "metadata": {},
    "outputs": [
@@ -1527,7 +1546,7 @@
        "86577"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
