Day2 실습 노트 올립니다.

--- a/5.머신 러닝 심화.ipynb
+++ b/5.머신 러닝 심화.ipynb
@@ -2521,7 +2521,7 @@
     "```bash\n",
     "docker exec -it multi_rcmd /bin/bash\n",
     "\n",
-    "tensorboard --logdir /logs/nn_basic/ --bind_all\n",
+    "tensorboard --logdir logs/nn_basic/ --bind_all\n",
     "```\n",
     "\n",
     "브라우져에서, http://localhost:6006 에 접근하면 \n",
