최종 노트입니다.

--- a/0.분석 환경구성.ipynb
+++ b/0.분석 환경구성.ipynb
@@ -502,7 +502,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mon Dec 22 09:26:14 2025       \n",
+      "Wed Dec 24 09:22:18 2025       \n",
       "+-----------------------------------------------------------------------------------------+\n",
       "| NVIDIA-SMI 590.44.01              Driver Version: 591.44         CUDA Version: 13.1     |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
@@ -511,7 +511,7 @@
       "|                                         |                        |               MIG M. |\n",
       "|=========================================+========================+======================|\n",
       "|   0  NVIDIA GeForce RTX 2070        On  |   00000000:01:00.0  On |                  N/A |\n",
-      "| 16%   25C    P8             19W /  175W |    2352MiB /   8192MiB |      2%      Default |\n",
+      "| 16%   26C    P8             12W /  175W |    3822MiB /   8192MiB |      1%      Default |\n",
       "|                                         |                        |                  N/A |\n",
       "+-----------------------------------------+------------------------+----------------------+\n",
       "\n",
@@ -520,7 +520,8 @@
       "|  GPU   GI   CI              PID   Type   Process name                        GPU Memory |\n",
       "|        ID   ID                                                               Usage      |\n",
       "|=========================================================================================|\n",
-      "|    0   N/A  N/A              27      G   /Xwayland                             N/A      |\n",
+      "|    0   N/A  N/A              54      G   /Xwayland                             N/A      |\n",
+      "|    0   N/A  N/A           42435      C   /python3.12                           N/A      |\n",
       "+-----------------------------------------------------------------------------------------+\n"
      ]
     }
