--- a/2.추천 시스템 개론.ipynb
+++ b/2.추천 시스템 개론.ipynb
@@ -991,16 +991,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 ['Gordy (1995)', '01-Jan-1995']\n",
-      "2 ['Zeus and Roxanne (1997)', '10-Jan-1997']\n",
-      "3 ['Flubber (1997)', '01-Jan-1997']\n",
-      "4 ['Rendezvous in Paris (Rendez-vous de Paris, Les) (1995)', '28-Jun-1996']\n",
-      "5 ['Stag (1997)', '01-Jan-1997']\n",
-      "6 ['American Buffalo (1996)', '13-Sep-1996']\n",
-      "7 ['Twin Town (1997)', '30-May-1997']\n",
-      "8 ['Batman (1989)', '01-Jan-1989']\n",
-      "9 ['Robocop 3 (1993)', '01-Jan-1993']\n",
-      "10 ['Gold Diggers: The Secret of Bear Mountain (1995)', '01-Jan-1995']\n"
+      "1 [\"Dante's Peak (1997)\", '07-Feb-1997']\n",
+      "2 ['Solo (1996)', '23-Aug-1996']\n",
+      "3 [\"Some Mother's Son (1996)\", '27-Dec-1996']\n",
+      "4 ['Bad Company (1995)', '01-Jan-1995']\n",
+      "5 ['Land and Freedom (Tierra y libertad) (1995)', '29-Mar-1996']\n",
+      "6 ['Bliss (1997)', '06-Jun-1997']\n",
+      "7 ['Mrs. Brown (Her Majesty, Mrs. Brown) (1997)', '01-Jan-1997']\n",
+      "8 ['8 Heads in a Duffel Bag (1997)', '18-Apr-1997']\n",
+      "9 ['To Have, or Not (1995)', '06-Jun-1997']\n",
+      "10 ['Hush (1998)', '10-Mar-1998']\n"
      ]
     }
    ],
@@ -1018,13 +1018,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100000/100000 [00:03<00:00, 27803.45it/s]\n"
+      "100%|██████████| 100000/100000 [00:03<00:00, 26196.14it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "np.float64(0.00592)"
+       "np.float64(0.0059)"
       ]
      },
      "execution_count": 17,
@@ -2113,7 +2113,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100000/100000 [00:38<00:00, 2627.33it/s]\n"
+      "100%|██████████| 100000/100000 [00:40<00:00, 2461.05it/s]\n"
      ]
     },
     {
@@ -2154,7 +2154,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100000/100000 [00:35<00:00, 2845.07it/s]\n"
+      "100%|██████████| 100000/100000 [00:39<00:00, 2547.73it/s]\n"
      ]
     },
     {
@@ -2216,7 +2216,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100000/100000 [01:34<00:00, 1063.79it/s]\n"
+      "100%|██████████| 100000/100000 [01:52<00:00, 888.08it/s]\n"
      ]
     },
     {
@@ -2283,7 +2283,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100000/100000 [01:35<00:00, 1046.33it/s]\n"
+      "100%|██████████| 100000/100000 [02:05<00:00, 796.52it/s]\n"
      ]
     },
     {
@@ -2411,7 +2411,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 22015/22015 [00:00<00:00, 54484.98it/s]\n"
+      "100%|██████████| 22015/22015 [00:00<00:00, 48386.93it/s]\n"
      ]
     },
     {
@@ -2456,7 +2456,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 22015/22015 [00:00<00:00, 62542.53it/s]\n"
+      "100%|██████████| 22015/22015 [00:00<00:00, 39142.19it/s]\n"
      ]
     },
     {
@@ -2498,7 +2498,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 22015/22015 [00:00<00:00, 55004.11it/s]\n"
+      "100%|██████████| 22015/22015 [00:00<00:00, 24269.06it/s]\n"
      ]
     },
     {
@@ -2554,7 +2554,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 22015/22015 [00:00<00:00, 24812.06it/s]\n"
+      "100%|██████████| 22015/22015 [00:02<00:00, 9647.34it/s] \n"
      ]
     },
     {
@@ -2998,7 +2998,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 22015/22015 [00:00<00:00, 65661.64it/s]\n"
+      "100%|██████████| 22015/22015 [00:00<00:00, 63989.58it/s]\n"
      ]
     },
     {
@@ -3260,7 +3260,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 22015/22015 [00:00<00:00, 27970.33it/s]\n"
+      "100%|██████████| 22015/22015 [00:01<00:00, 16383.78it/s]\n"
      ]
     },
     {
