--- a/3.콘텐츠 기반 추천.ipynb
+++ b/3.콘텐츠 기반 추천.ipynb
@@ -405,7 +405,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3000/3000 [00:03<00:00, 934.46it/s]\n"
+      "100%|██████████| 3000/3000 [00:03<00:00, 889.07it/s]\n"
      ]
     },
     {
@@ -1216,23 +1216,40 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7932</td>\n",
-       "      <td>다크 데이즈</td>\n",
+       "      <td>25770</td>\n",
+       "      <td>박수갈채</td>\n",
        "      <td>en</td>\n",
-       "      <td>Dark Days</td>\n",
-       "      <td>/4Xy9EbYc2XuZRnj7t0vYz3gwaKJ.jpg</td>\n",
+       "      <td>Applause</td>\n",
+       "      <td>/dhcVy77WKN0Mr9kCzRgwbbtkEd3.jpg</td>\n",
        "      <td>None</td>\n",
        "      <td>0</td>\n",
-       "      <td>2000-08-30</td>\n",
-       "      <td>82</td>\n",
+       "      <td>1929-10-07</td>\n",
+       "      <td>80</td>\n",
        "      <td>None</td>\n",
-       "      <td>tt0235327</td>\n",
+       "      <td>tt0019644</td>\n",
        "      <td>N</td>\n",
        "      <td>Y</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>32166</td>\n",
+       "      <td>Strangers When We Meet</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Strangers When We Meet</td>\n",
+       "      <td>/3fGmqmBjkvnwCE188L8IdYztKnK.jpg</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1960-06-29</td>\n",
+       "      <td>117</td>\n",
+       "      <td>None</td>\n",
+       "      <td>tt0054345</td>\n",
+       "      <td>N</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>78499</td>\n",
        "      <td>토이 스토리 3</td>\n",
        "      <td>en</td>\n",
@@ -1249,86 +1266,69 @@
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>99809</td>\n",
-       "      <td>The Waiting Room</td>\n",
-       "      <td>en</td>\n",
-       "      <td>The Waiting Room</td>\n",
-       "      <td>/sgkewSYT4hM4mMY3HzhLk4m0IME.jpg</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2012-09-26</td>\n",
-       "      <td>81</td>\n",
-       "      <td>None</td>\n",
-       "      <td>tt1618399</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>130275</td>\n",
-       "      <td>The Life and Mind of Mark DeFriest</td>\n",
+       "      <td>164165</td>\n",
+       "      <td>Three Days</td>\n",
        "      <td>en</td>\n",
-       "      <td>The Life and Mind of Mark DeFriest</td>\n",
-       "      <td>/pAdSmPEnMgUv8dIaN3qyDKlJFxL.jpg</td>\n",
+       "      <td>Three Days</td>\n",
+       "      <td>/gAxVMBz3mueFJqbxISwJ7ejN5u6.jpg</td>\n",
        "      <td>None</td>\n",
        "      <td>0</td>\n",
-       "      <td>2014-04-30</td>\n",
-       "      <td>92</td>\n",
+       "      <td>2001-12-09</td>\n",
+       "      <td>91</td>\n",
        "      <td>None</td>\n",
-       "      <td>tt2766004</td>\n",
+       "      <td>tt0301935</td>\n",
        "      <td>N</td>\n",
        "      <td>Y</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>142681</td>\n",
-       "      <td>Consolation Marriage</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Consolation Marriage</td>\n",
-       "      <td>/oiIeAefuWZUx4bXC32togtw4kUQ.jpg</td>\n",
+       "      <td>171543</td>\n",
+       "      <td>ССД: Смерть Советским Детям</td>\n",
+       "      <td>ru</td>\n",
+       "      <td>ССД: Смерть Советским Детям</td>\n",
+       "      <td>/7EqQUQPSoFnv9qD6oEOPjjzxhAf.jpg</td>\n",
        "      <td>None</td>\n",
        "      <td>0</td>\n",
-       "      <td>1931-11-21</td>\n",
-       "      <td>81</td>\n",
+       "      <td>2008-09-04</td>\n",
+       "      <td>110</td>\n",
        "      <td>None</td>\n",
-       "      <td>tt0021761</td>\n",
+       "      <td>tt1329231</td>\n",
        "      <td>N</td>\n",
        "      <td>Y</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>167546</td>\n",
-       "      <td>골드</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Gold</td>\n",
-       "      <td>/9yobUFSdIP8PG6L7UVWpNjbTUPa.jpg</td>\n",
-       "      <td>인생 역전의 한 방을 노리는 ‘케니’(매튜 맥커너히)는 최대 규모의 금광 발견을 꿈...</td>\n",
+       "      <td>178909</td>\n",
+       "      <td>A Carne é Fraca</td>\n",
+       "      <td>pt</td>\n",
+       "      <td>A Carne é Fraca</td>\n",
+       "      <td>/1mjRiEhq6WTS9J8Rq2ad3KzhPnN.jpg</td>\n",
+       "      <td>None</td>\n",
        "      <td>0</td>\n",
-       "      <td>2016-02-03</td>\n",
-       "      <td>121</td>\n",
-       "      <td>전세계를 뒤집은 한탕 실화!</td>\n",
-       "      <td>tt1800302</td>\n",
+       "      <td>2004-01-01</td>\n",
+       "      <td>54</td>\n",
+       "      <td>None</td>\n",
+       "      <td>tt2388080</td>\n",
        "      <td>N</td>\n",
        "      <td>Y</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>185205</td>\n",
-       "      <td>Free to Be… You and Me</td>\n",
+       "      <td>198621</td>\n",
+       "      <td>Like.Share.Follow.</td>\n",
        "      <td>en</td>\n",
-       "      <td>Free to Be… You and Me</td>\n",
-       "      <td>/7SVdTjRXjLccJxvlABVgNqFTDSk.jpg</td>\n",
+       "      <td>Like.Share.Follow.</td>\n",
+       "      <td>/frh6P7hqfIqXhzRcKb5UjYRFfPZ.jpg</td>\n",
        "      <td>None</td>\n",
        "      <td>0</td>\n",
-       "      <td>1974-03-11</td>\n",
-       "      <td>48</td>\n",
+       "      <td>2017-10-31</td>\n",
+       "      <td>97</td>\n",
        "      <td>None</td>\n",
-       "      <td>tt0194897</td>\n",
+       "      <td>tt7441032</td>\n",
        "      <td>N</td>\n",
        "      <td>Y</td>\n",
        "      <td>None</td>\n",
@@ -1350,75 +1350,54 @@
        "      <td>Y</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>266258</td>\n",
-       "      <td>Late Night Sessions</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Late Night Sessions</td>\n",
-       "      <td>/5fuac0grB8aJEH2TylXAPatxivb.jpg</td>\n",
-       "      <td>None</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1999-03-15</td>\n",
-       "      <td>82</td>\n",
-       "      <td>None</td>\n",
-       "      <td>tt0235539</td>\n",
-       "      <td>N</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   movie_id                         movie_title original_language  \\\n",
-       "0      3114                            토이 스토리 2                en   \n",
-       "1      7932                              다크 데이즈                en   \n",
-       "2     78499                            토이 스토리 3                en   \n",
-       "3     99809                    The Waiting Room                en   \n",
-       "4    130275  The Life and Mind of Mark DeFriest                en   \n",
-       "5    142681                Consolation Marriage                en   \n",
-       "6    167546                                  골드                en   \n",
-       "7    185205              Free to Be… You and Me                en   \n",
-       "8    201588                            토이 스토리 4                en   \n",
-       "9    266258                 Late Night Sessions                en   \n",
+       "   movie_id                  movie_title original_language  \\\n",
+       "0      3114                     토이 스토리 2                en   \n",
+       "1     25770                         박수갈채                en   \n",
+       "2     32166       Strangers When We Meet                en   \n",
+       "3     78499                     토이 스토리 3                en   \n",
+       "4    164165                   Three Days                en   \n",
+       "5    171543  ССД: Смерть Советским Детям                ru   \n",
+       "6    178909              A Carne é Fraca                pt   \n",
+       "7    198621           Like.Share.Follow.                en   \n",
+       "8    201588                     토이 스토리 4                en   \n",
        "\n",
-       "                       original_title                       poster_path  \\\n",
-       "0                         Toy Story 2  /gXUNsdIIn6NiEBvh8Mq6gjgVPm0.jpg   \n",
-       "1                           Dark Days  /4Xy9EbYc2XuZRnj7t0vYz3gwaKJ.jpg   \n",
-       "2                         Toy Story 3  /hbUWahBLUon8RaIb9Tq7aWCBCtS.jpg   \n",
-       "3                    The Waiting Room  /sgkewSYT4hM4mMY3HzhLk4m0IME.jpg   \n",
-       "4  The Life and Mind of Mark DeFriest  /pAdSmPEnMgUv8dIaN3qyDKlJFxL.jpg   \n",
-       "5                Consolation Marriage  /oiIeAefuWZUx4bXC32togtw4kUQ.jpg   \n",
-       "6                                Gold  /9yobUFSdIP8PG6L7UVWpNjbTUPa.jpg   \n",
-       "7              Free to Be… You and Me  /7SVdTjRXjLccJxvlABVgNqFTDSk.jpg   \n",
-       "8                         Toy Story 4  /9P8IX4UyH3QFLL4MV6GZyuOB7Ue.jpg   \n",
-       "9                 Late Night Sessions  /5fuac0grB8aJEH2TylXAPatxivb.jpg   \n",
+       "                original_title                       poster_path  \\\n",
+       "0                  Toy Story 2  /gXUNsdIIn6NiEBvh8Mq6gjgVPm0.jpg   \n",
+       "1                     Applause  /dhcVy77WKN0Mr9kCzRgwbbtkEd3.jpg   \n",
+       "2       Strangers When We Meet  /3fGmqmBjkvnwCE188L8IdYztKnK.jpg   \n",
+       "3                  Toy Story 3  /hbUWahBLUon8RaIb9Tq7aWCBCtS.jpg   \n",
+       "4                   Three Days  /gAxVMBz3mueFJqbxISwJ7ejN5u6.jpg   \n",
+       "5  ССД: Смерть Советским Детям  /7EqQUQPSoFnv9qD6oEOPjjzxhAf.jpg   \n",
+       "6              A Carne é Fraca  /1mjRiEhq6WTS9J8Rq2ad3KzhPnN.jpg   \n",
+       "7           Like.Share.Follow.  /frh6P7hqfIqXhzRcKb5UjYRFfPZ.jpg   \n",
+       "8                  Toy Story 4  /9P8IX4UyH3QFLL4MV6GZyuOB7Ue.jpg   \n",
        "\n",
        "                                            overview  series_id release_date  \\\n",
        "0  앤디가 카우보이 캠프에 간 동안 앤디의 어머니는 벼룩 시장을 열고 앤디의 장난감 중...          1   1999-10-30   \n",
-       "1                                               None          0   2000-08-30   \n",
-       "2  모든 장난감들이 겪는 가장 슬픈 일은 바로 주인이 성장해 더이상 자신들과 놀아주지 ...          1   2010-06-16   \n",
-       "3                                               None          0   2012-09-26   \n",
-       "4                                               None          0   2014-04-30   \n",
-       "5                                               None          0   1931-11-21   \n",
-       "6  인생 역전의 한 방을 노리는 ‘케니’(매튜 맥커너히)는 최대 규모의 금광 발견을 꿈...          0   2016-02-03   \n",
-       "7                                               None          0   1974-03-11   \n",
+       "1                                               None          0   1929-10-07   \n",
+       "2                                               None          0   1960-06-29   \n",
+       "3  모든 장난감들이 겪는 가장 슬픈 일은 바로 주인이 성장해 더이상 자신들과 놀아주지 ...          1   2010-06-16   \n",
+       "4                                               None          0   2001-12-09   \n",
+       "5                                               None          0   2008-09-04   \n",
+       "6                                               None          0   2004-01-01   \n",
+       "7                                               None          0   2017-10-31   \n",
        "8  앤디와 작별한 우디는 새로운 주인 보니와의 생활에 적응 중이다. 보니는 처음 간 유...          1   2019-06-19   \n",
-       "9                                               None          0   1999-03-15   \n",
        "\n",
        "   runtime             tagline    imdb_id adult useyn regtime  \n",
        "0       94      무한한 도전과 꿈의 세계로  tt0120363     N     Y    None  \n",
-       "1       82                None  tt0235327     N     Y    None  \n",
-       "2      102  전세계가 감동한 가장 위대한 탈출  tt0435761     N     Y    None  \n",
-       "3       81                None  tt1618399     N     Y    None  \n",
-       "4       92                None  tt2766004     N     Y    None  \n",
-       "5       81                None  tt0021761     N     Y    None  \n",
-       "6      121     전세계를 뒤집은 한탕 실화!  tt1800302     N     Y    None  \n",
-       "7       48                None  tt0194897     N     Y    None  \n",
-       "8      100  우리의 여행은 아직 끝나지 않았다  tt1979376     N     Y    None  \n",
-       "9       82                None  tt0235539     N     Y    None  "
+       "1       80                None  tt0019644     N     Y    None  \n",
+       "2      117                None  tt0054345     N     Y    None  \n",
+       "3      102  전세계가 감동한 가장 위대한 탈출  tt0435761     N     Y    None  \n",
+       "4       91                None  tt0301935     N     Y    None  \n",
+       "5      110                None  tt1329231     N     Y    None  \n",
+       "6       54                None  tt2388080     N     Y    None  \n",
+       "7       97                None  tt7441032     N     Y    None  \n",
+       "8      100  우리의 여행은 아직 끝나지 않았다  tt1979376     N     Y    None  "
       ]
      },
      "execution_count": 16,
@@ -1440,7 +1419,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3000/3000 [00:14<00:00, 200.15it/s]\n"
+      "100%|██████████| 3000/3000 [00:15<00:00, 193.92it/s]\n"
      ]
     },
     {
@@ -1762,10 +1741,7 @@
    "execution_count": 19,
    "id": "0d44d7e7-ff58-49ed-b39e-e55b55142e4c",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "scrolled": true
    },
    "outputs": [
     {
@@ -3406,7 +3382,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3000/3000 [00:27<00:00, 111.00it/s]\n"
+      "100%|██████████| 3000/3000 [00:27<00:00, 107.47it/s]\n"
      ]
     },
     {
@@ -3699,7 +3675,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3000/3000 [00:43<00:00, 68.56it/s]\n"
+      "100%|██████████| 3000/3000 [00:44<00:00, 67.26it/s]\n"
      ]
     },
     {
